test/js/node/test/parallel/test-stream-pipeline-http2.js.log.txt
140 |     }
141 |   }
142 | }
143 | function pipeline(...streams) {
144 |   return pipelineImpl(streams, once(popCallback(streams)));
145 | function pipelineImpl(streams, callback, opts) {
                           ^
TypeError: requires 2 arguments
      at pipelineImpl (internal:streams/pipeline:145:22)
      at node:stream/promises:8:23
      at new Promise (1:11)
      at pipeline (node:stream/promises:7:18)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-http2.js:25:5
      at emitListeningNextTick (node:net:944:31)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
